--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -116,3 +116,15 @@
 8. lintcode 1363. ZigZag Conversion
 9. lintcode 407 plus one 
 10. lintcode 123. Word Search
+
+8/15
+1. lintcode 200. Longest Palindromic Substring
+2. lintcode 363. Trapping Rain Water
+3. lintcode 9. Fizz Buzz
+4. lintcode 657. Insert Delete GetRandom O(1)
+5. lintcode 1134. Find Duplicate File in System
+6. lintcode 63. Search in Rotated Sorted Array II
+7. lintcode 528. Flatten Nested List Iterator
+
+
+
