--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -125,6 +125,9 @@
 5. lintcode 1134. Find Duplicate File in System
 6. lintcode 63. Search in Rotated Sorted Array II
 7. lintcode 528. Flatten Nested List Iterator
+8. lintcode 551. Nested List Weight Sum
+9. lintcode 419. Roman to Integer
+10. lintcode 418. Integer to Roman
 
 
 
