--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -128,6 +128,10 @@
 8. lintcode 551. Nested List Weight Sum
 9. lintcode 419. Roman to Integer
 10. lintcode 418. Integer to Roman
+11. lintcode 892. Alien Dictionary
+12. lintcode 978. Basic Calculator
+
+
 
 
 
