--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -132,7 +132,19 @@
 12. lintcode 978. Basic Calculator
 
 8/26
-1. 
+1. lintcode 980. Basic Calculator II
+2. lintcode 978. Basic Calculator
+3. lintcode 57. 3Sum
+4. lintcode 213. String Compression
+5. lintcode 54. String to Integer (atoi)
+6. lintcode 451. Swap Nodes in Pairs
+7. lintcode 35. Reverse Linked List
+8. lintcode 52. Next Permutation
+9. lintcode 464. Sort Integers II
+10. lintcode 1536. Find First and Last Position of Element in Sorted Array
+11. lintcode 120. Word Ladder
+
+
 
 
 
