--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -144,6 +144,17 @@
 10. lintcode 1536. Find First and Last Position of Element in Sorted Array
 11. lintcode 120. Word Ladder
 
+8/17
+1. lintcode 41. Maximum Subarray
+2. lintcode 1310. Product of Array Except Self
+3. lintcode 1292. Odd Even Linked List
+4. lintcode 838. Subarray Sum Equals K
+5. lintcode 420. Count and Say
+6. lintcode 477. Surrounded Regions
+7. lintcode 64. Merge Sorted Array
+8. 
+
+
 
 
 
