--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -144,7 +144,7 @@
 10. lintcode 1536. Find First and Last Position of Element in Sorted Array
 11. lintcode 120. Word Ladder
 
-8/17
+8/27
 1. lintcode 41. Maximum Subarray
 2. lintcode 1310. Product of Array Except Self
 3. lintcode 1292. Odd Even Linked List
@@ -152,7 +152,32 @@
 5. lintcode 420. Count and Say
 6. lintcode 477. Surrounded Regions
 7. lintcode 64. Merge Sorted Array
-8. 
+8. lintcode 78. Longest Common Prefix
+9. lintcode 162. Set Matrix Zeroes
+10. lintcode 376. Binary Tree Path Sum
+11. lintcode 36. Reverse Linked List II
+
+8／28
+1. lintcode 384. Longest Substring Without Repeating Characters
+2. lintcode 46. Majority Element
+3. lintcode 1251. Split Array Largest Sum
+4. lintcode 612. K Closest Points
+5. lintcode 905. Nested List Weight Sum II
+6. lintcode 94. Binary Tree Maximum Path Sum
+7. lintcode 596. Minimum Subtree
+8. lintcode 475. Binary Tree Maximum Path Sum II
+9. lintcode 105. Copy List with Random Pointer
+
+8/29
+1. lintcode 1305. Integer to English Words
+2. 
+
+
+8/30
+1. lintcode 94. Binary Tree Maximum Path Sum
+
+
+
 
 
 
