--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -170,7 +170,19 @@
 
 8/29
 1. lintcode 1305. Integer to English Words
-2. 
+2. lintcode 533. Two Sum - Closest to target
+3.  lintcode 59. 3Sum Closest
+4. lintcode 539. Move Zeroes (inplace)
+5. lintcode 96. Partition List
+6. lintcode 760. Binary Tree Right Side View
+7. lintcode 172. Remove Element
+8. lintcode 421. Simplify Path
+9. lintcode 422. Length of Last Word
+10. lintcode 101. Remove Duplicates from Sorted Array II
+11. lintcode 141. Sqrt(x)
+12. lintcode 246. Binary Tree Path Sum II
+13. lintcode 656. Multiply Strings
+
 
 
 8/30
