--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -183,12 +183,18 @@
 12. lintcode 246. Binary Tree Path Sum II
 13. lintcode 656. Multiply Strings
 14. lintcode 411. Gray Code
-
-
+15. lintcode 480. Binary Tree Paths
 
 
 8/30
 1. lintcode 94. Binary Tree Maximum Path Sum
+2. lintcode 155. Minimum Depth of Binary Tree
+3. lintcode lintcode 1353. Sum Root to Leaf Numbers
+4. lintcode 389. Valid Sudoku
+5. lintcode 94. Binary Tree Maximum Path Sum
+6. lintcode 174. Remove Nth Node From End of List
+7. lintcode 171. Anagrams
+
 
 
 
