--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -195,6 +195,15 @@
 6. lintcode 174. Remove Nth Node From End of List
 7. lintcode 171. Anagrams
 
+8/31
+1. lintcode 170. Rotate List
+2. lintcode 1324. Count Primes
+3. lintcode 13. Implement strStr()
+4. lintcode 161. Rotate Image
+5. lintcode 1363. ZigZag Conversion
+6. lintcode 152. Combinations
+
+
 
 
 
