--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -203,6 +203,16 @@
 5. lintcode 1363. ZigZag Conversion
 6. lintcode 152. Combinations
 
+9/1
+1. lintcode 1281. Top K Frequent Elements
+2. lintcode 1006. Subdomain Visit Count
+3. lintcode 1288. Reconstruct Itinerary
+4. lintcode 53. Reverse Words in a String
+5. lintcode 426. Restore IP Addresses
+6. lintcode 158. Valid Anagram
+7. lintcode 1143. Minimum Index Sum of Two Lists
+
+
 
 
 
