--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -212,6 +212,18 @@
 6. lintcode 158. Valid Anagram
 7. lintcode 1143. Minimum Index Sum of Two Lists
 
+9/2
+1. lintcode 626. Rectangle Overlap
+2. lintcode 7. Serialize and Deserialize Binary Tree
+3. lintcode 58. 4Sum
+4. lintcode 111. Climbing Stairs
+5. lintcode 1181. Diameter of Binary Tree
+6. lintcode 149. Best Time to Buy and Sell Stock
+7. lintcode 150. Best Time to Buy and Sell Stock II
+8. lintcode 41. Maximum Subarray
+9. lintcode 162. Set Matrix Zeroes
+10. 
+
 
 
 
