--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -222,7 +222,15 @@
 7. lintcode 150. Best Time to Buy and Sell Stock II
 8. lintcode 41. Maximum Subarray
 9. lintcode 162. Set Matrix Zeroes
-10. 
+10. lintcode 184. Largest Number
+11. lintcode 82. Single Number
+12. lintcode 388. Permutation Sequence
+13. lintcode 191. Maximum Product Subarray
+14. lintcode 384. Longest Substring Without Repeating Characters
+
+
+
+
 
 
 
