--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -228,6 +228,21 @@
 13. lintcode 191. Maximum Product Subarray
 14. lintcode 384. Longest Substring Without Repeating Characters
 
+9/3
+1. lintcode 6. Merge Two Sorted Arrays
+2. lintcode 427. Generate Parentheses
+3. lintcode 1362. Substring with Concatenation of All Words
+4. lintcode 164. Unique Binary Search Trees II
+5. lintcode 163. Unique Binary Search Trees
+6. lintcode 646. First Position Unique Character
+7. lintcode 513. Perfect Squares
+8. lintcode 663. Walls and Gates
+9. lintcode 978. Basic Calculator
+10. lintcode 424. Evaluate Reverse Polish Notation
+11. lintcode 1126. Merge Two Binary Trees
+
+
+
 
 
 
