--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -241,6 +241,16 @@
 10. lintcode 424. Evaluate Reverse Polish Notation
 11. lintcode 1126. Merge Two Binary Trees
 
+9/4
+1. lintcode 99. Reorder List
+2. lintcode 920. Meeting Rooms
+3. lintcode 919. Meeting Rooms II
+4. leetcode Random Pick with Weight
+5. leetcode Implement strStr()
+6. leetcode Letter Combinations of a Phone Number
+
+
+
 
 
 
