--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -251,7 +251,13 @@
 
 9/5
 1. leetcode 28. Implement strStr()
-2. 
+2. yelp oa.Merge String 
+3. yelp oa.Prefix/Non-prefix Search
+4. yelp love_message
+5. leetcode 692. Top K Frequent Words
+6. yelp Random Match Users  
+7. leetcode 75. Sort Colors
+
 
 
 
