--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -265,8 +265,8 @@
 4. leetcode 599. Minimum Index Sum of Two Lists
 5. lintcode 638. Isomorphic Strings
 6. leetcode 355. Design Twitter ---OOD
-### difference between set.discard and set.remove. ####discard: If the element is not present in the set, then no error or exception is raised and the original set is printed. remove: If the element is not present in the set, then an error or exception is raised.
-### Returns a union of two set: ####set_a | set_b
+#### difference between set.discard and set.remove. #### discard: If the element is not present in the set, then no error or exception is raised and the original set is printed. remove: If the element is not present in the set, then an error or exception is raised.
+#### Returns a union of two set: #### set_a | set_b
 7. leetcode 56. Merge Intervals
 8. leetocde 349. Intersection of Two Arrays
 9. leetcode 14. Longest Common Prefix
