--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -275,6 +275,9 @@
 1. leetcode 208. Implement Trie (Prefix Tree) !!!很重要，重写
 2. yelp prefix search
 3. make a collection of yelp interview quesions:
+https://github.com/MonicaZheng/Interview_Question_Collections/blob/master/yelp_interview_questions.ipynb
+4. leetcode 273. Integer to English Words
+5. leetcode 896. Monotonic Array
 
 
 
