--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -279,6 +279,30 @@ https://github.com/MonicaZheng/Interview_Question_Collections/blob/master/yelp_i
 4. leetcode 273. Integer to English Words
 5. leetcode 896. Monotonic Array
 
+9/8
+1. leetcode 239. Sliding Window Maximum ---单调栈 decreasing deque, For each index i:
+
+Pop (from the end) indexes of smaller elements (they'll be useless).
+Append the current index.
+Pop (from the front) the index i - k, if it's still in the deque (it falls out of the window).
+If our window has reached size k, append the current window maximum to the output.
+
+2. leetcode 784. Letter Case Permutation ---isdigit()!!!!
+3. leetcode 593. Valid Square ---calculate distance, sort distance, then compare
+4. leetcode 179. Largest Number --- from functools import cmp_to_key
+5. leetcode 21. Merge Two Sorted Lists
+6. leetcode 127. Word Ladder --- wordList = set(wordList)
+7. leetcode 359. Logger Rate Limiter
+8. leetcode 362. Design Hit Counter
+9. leetcode 208. Implement Trie (Prefix Tree) --- 
+  def insert(self, word: str) -> None:
+        """
+        Inserts a word into the trie.
+        """
+        current = self.node
+        for letter in word:
+            current = current.children[letter]
+        current.is_word = True
 
 
 
