--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -294,15 +294,16 @@ If our window has reached size k, append the current window maximum to the outpu
 6. leetcode 127. Word Ladder --- wordList = set(wordList)
 7. leetcode 359. Logger Rate Limiter
 8. leetcode 362. Design Hit Counter
-9. leetcode 208. Implement Trie (Prefix Tree) --- 
+9. leetcode 208. Implement Trie (Prefix Tree) --- insert： 
   def insert(self, word: str) -> None:
-        """
-        Inserts a word into the trie.
-        """
         current = self.node
         for letter in word:
             current = current.children[letter]
         current.is_word = True
+10. leetcode 139. Word Break
+11. leetcode 692. Top K Frequent Words
+12. leetcode 253. Meeting Rooms II
+13. leetcode 3. Longest Substring Without Repeating Characters
 
 
 
