--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -305,6 +305,24 @@ If our window has reached size k, append the current window maximum to the outpu
 12. leetcode 253. Meeting Rooms II
 13. leetcode 3. Longest Substring Without Repeating Characters
 
+9/9
+1. leetcode 937. Reorder Data in Log Files
+2. leetcode 819. Most Common Word ---- sort dict by val: sorted(map.items(), key = lambda x: x[1], reverse = True)
+--- remove punctuation: s.translate(str.maketrans('', '', string.punctuation))
+3. leetcode 973. K Closest Points to Origin
+4. leetcode 289. Game of Life -- live to die: from 1 to -1. die to live: from 0 to 2
+5. leetcode 957. Prison Cells After N Days -- 
+if N > 14:
+      N = N%14
+if N%14 == 0:
+      N = 14
+   
+ 6. leetcode 994. Rotting Oranges
+ 7. leetcode 295. Find Median from Data Stream
+ 8. leetcode 763. Partition Labels
+ 9. leetcode 155. Min Stack
+ 
+
 
 
 
