--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -322,6 +322,17 @@ if N%14 == 0:
  8. leetcode 763. Partition Labels
  9. leetcode 155. Min Stack
  
+ 9/10
+ 1. leetcode 863. All Nodes Distance K in Binary Tree  ---graph + bfs
+ 2. leetcode 997. Find the Town Judge ---hashmap
+ 3. leetcode 49. Group Anagrams
+ 4. leetcode 200. Number of Islands
+ 5. leetcode 273. Integer to English Words ----重写
+ 6. leetcode 1099. Two Sum Less Than K
+ 7. leetcode 138. Copy List with Random Pointer
+ 
+ 
+ 
 
 
 
