--- a/8.15-9.15.md
+++ b/8.15-9.15.md
@@ -331,6 +331,26 @@ if N%14 == 0:
  6. leetcode 1099. Two Sum Less Than K
  7. leetcode 138. Copy List with Random Pointer
  
+ 9/11
+ 1. leetcode 54. Spiral Matrix
+ 2. leetcode 348. Design Tic-Tac-Toe
+ 3. leetcode 2. Add Two Numbers
+ 4. leetcode 341. Flatten Nested List Iterator
+ 5. leetcode 490. The Maze
+ 6. leetcode 912. Sort an Array --why quick sort is nlogn: have log(N) partitioning "levels", and each level has to visit all N inputs. So, log(N) levels times N operations per level gives us O(N log N) overall complexity.
+ 7. leetcode 1. Two Sum
+ 
+ 8. leetcode 744. Find Smallest Letter Greater Than Target
+ 
+ 9/12
+ 1. leetcode 15. 3Sum
+ 2. leetcode 28. Implement strStr() ----for i in range(len(haystack)-len(needle)+1):
+ 3. leetcode 79. Word Search
+ 4. leetcode 20. Valid Parentheses
+ 5. leetcode 5. Longest Palindromic Substring
+ 6. leetcode 23. Merge k Sorted Lists
+ 
+ 
  
  
 
