--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -19,3 +19,13 @@
 11. leetcode 206. Reverse Linked List
 12. leetcode 283. Move Zeroes
 
+9/18
+1. leetcode 53. Maximum Subarray ---default ans should be -sys.maxsize
+2. leetcode 1062. Longest Repeating Substring ---binary search.
+3. leetcode 136. Single Number --- ^ xor
+4. leetcode 572. Subtree of Another Tree
+5. leetcode 260. Single Number III --- bit maniputation. first get ans = 3 ^ 5. Then find partition = ans & (~(ans-1)) to make it & 3 and & 5 not equal. 
+6. leetcode 199. Binary Tree Right Side View
+7. leetcode 42. Trapping Rain Water ---2 times travese
+8. leetcode 31. Next Permutation
+
