--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -29,3 +29,19 @@
 7. leetcode 42. Trapping Rain Water ---2 times travese
 8. leetcode 31. Next Permutation
 
+9/19
+1. leetcode 617. Merge Two Binary Trees ---if not t1: return t2. if not t2: return t1
+2. leetcode 387. First Unique Character in a String
+3. leetcode 13. Roman to Integer
+4. leetocde 12. Integer to Roman
+5. leetcode 341. Flatten Nested List Iterator
+6. leetcode 496. Next Greater Element I
+7. leetcode 348. Design Tic-Tac-Toe
+8. leetcode 863. All Nodes Distance K in Binary Tree
+9. leetcode 953. Verifying an Alien Dictionary
+10. leetcode 39. Combination Sum
+11. leetcode 40. Combination Sum II
+
+9/20
+1. leetcode 165. Compare Version Numbers
+2. leetcode 380. Insert Delete GetRandom O(1) ---Del should be in the last step
