--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -45,3 +45,12 @@
 9/20
 1. leetcode 165. Compare Version Numbers
 2. leetcode 380. Insert Delete GetRandom O(1) ---Del should be in the last step
+3. leetcode 2. Add Two Numbers
+4. leetcode 525. Contiguous Array ---重写
+5. leetcode 207. Course Schedule --- course_order = {i:[] for i in range(numCourses)}
+                                      degrees = [0]* (numCourses)
+ 
+6. leetcode 21. Merge Two Sorted Lists
+7. leetcode 516. Longest Palindromic Subsequence ---二维dp https://docs.google.com/presentation/d/1KhxVVgI8jzc-g7unDNKFiHY6XDNVSK6LNsadxB14K3U/edit#slide=id.g4dab135aa1_0_440
+8. leetcode 15. 3Sum
+
