--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -54,3 +54,13 @@
 7. leetcode 516. Longest Palindromic Subsequence ---二维dp https://docs.google.com/presentation/d/1KhxVVgI8jzc-g7unDNKFiHY6XDNVSK6LNsadxB14K3U/edit#slide=id.g4dab135aa1_0_440
 8. leetcode 15. 3Sum
 
+9/21
+1. leetcode 127. Word Ladder
+2. leetcode 937. Reorder Data in Log Files ---.isdigit()
+3. leetcode 525. Contiguous Array
+4. leetcode 505. The Maze II
+5. leetcode 496. Next Greater Element I ---stack
+6. leetcode 225. Implement Stack using Queues
+7. leetcode 541. Reverse String II
+8. leetcode 3. Longest Substring Without Repeating Characters
+
