--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -64,3 +64,15 @@
 7. leetcode 541. Reverse String II
 8. leetcode 3. Longest Substring Without Repeating Characters
 
+9/22
+1. leetcode 198. House Robber ---dp
+2. leetcode  36. Valid Sudoku ---set()
+3. leetcode 503. Next Greater Element II ---stack
+4. leetcode 496. Next Greater Element I
+5. leetcode 490. The Maze
+6. leetcode 200. Number of Islands  ---collections.deque([(i,j)])
+7. leetcode 79. Word Search
+8. leetcode 811. Subdomain Visit Count
+
+
+
