--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -74,5 +74,17 @@
 7. leetcode 79. Word Search
 8. leetcode 811. Subdomain Visit Count
 
+9/23
+1. leetcode 22. Generate Parentheses
+2. leetcode 238. Product of Array Except Self
+3. leetcode 56. Merge Intervals
+4. leetcode 394. Decode String
+5. leetcode 121. Best Time to Buy and Sell Stock
+6. leetcode 215. Kth Largest Element in an Array
+7. leetcode 349. Intersection of Two Arrays
+8. leetcode 350. Intersection of Two Arrays II ---collections.Counter(nums)
+9. leetcode 415. Add Strings ---ord(nums[i]) - ord('0') : str to int
+
+
 
 
