--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -85,6 +85,17 @@
 8. leetcode 350. Intersection of Two Arrays II ---collections.Counter(nums)
 9. leetcode 415. Add Strings ---ord(nums[i]) - ord('0') : str to int
 
+9/24
+1. leetcode 49. Group Anagrams
+2. leetcode 91. Decode Ways ---dp
+3. leetcode 516. Longest Palindromic Subsequence ---二维dp
+4. leetcode 269. Alien Dictionary
+5. leetcode 796. Rotate String
+6. leetcode 642. Design Search Autocomplete System ----重写
+7. leetcode 208. Implement Trie (Prefix Tree)
+8. leetcode 560. Subarray Sum Equals K
+9. leetcode 609. Find Duplicate File in System ---重写
+
 
 
 
