--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -96,6 +96,18 @@
 8. leetcode 560. Subarray Sum Equals K
 9. leetcode 609. Find Duplicate File in System ---重写
 
+9/25
+1. leetcode 74. Search a 2D Matrix
+2. leetcode 240. Search a 2D Matrix II ---重写，左下到右上
+3. leetcode 412. Fizz Buzz ---only one if
+4. leetcode 210. Course Schedule II
+5. leetcode 387. First Unique Character in a String
+6. leetcode 1046. Last Stone Weight ---heap
+7. leetcode 993. Cousins in Binary Tree ---bfs + hashmap
+8. leetcode 653. Two Sum IV - Input is a BST bfs, dfs都可以！，重写
+9. leetcode 94. Binary Tree Inorder Traversal
+10 .leetcode 48. Rotate Image
+
 
 
 
