--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -107,6 +107,10 @@
 8. leetcode 653. Two Sum IV - Input is a BST bfs, dfs都可以！，重写
 9. leetcode 94. Binary Tree Inorder Traversal
 10 .leetcode 48. Rotate Image
+11. leetcode 703. Kth Largest Element in a Stream
+12. leetcode 165. Compare Version Numbers
+13. leetcode 503. Next Greater Element II
+
 
 
 
