--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -111,6 +111,43 @@
 12. leetcode 165. Compare Version Numbers
 13. leetcode 503. Next Greater Element II
 
+9/26
+1. leetcode 733. Flood Fill
+2. leetcode 540. Single Element in a Sorted Array
+3. leetcode 146. LRU Cache
+4. leetcode 957. Prison Cells After N Days
+5. leetcode 1007. Minimum Domino Rotations For Equal Row ---重写
+6. leetcode 609. Find Duplicate File in System
+7. leetcode 17. Letter Combinations of a Phone Number
+
+9/27
+1. leetcode 20. Valid Parentheses
+2. leetcode 4. Median of Two Sorted Arrays ---重写
+3. leetcode 6. ZigZag Conversion ---重写
+4. leetcode 547. Friend Circles 
+5. leetcode 535. Encode and Decode TinyURL
+6. leetcode 33. Search in Rotated Sorted Array
+7. leetcode 91. Decode Ways
+
+9/28
+1. google oa
+2. leetcode 981. Time Based Key-Value Store ---重写
+3. purestorage oa
+4. leetcode 206. Reverse Linked List
+5. leetcode 287. Find the Duplicate Number !!!二分！！
+6. leetcode 13. Roman to Integer
+7. leetcode 3. Longest Substring Without Repeating Characters
+
+9/29
+1.leetcode 1007. Minimum Domino Rotations For Equal Row
+2. leetcode 973. K Closest Points to Origin
+3. leetcode 322. Coin Change ---dp  https://www.youtube.com/watch?v=uUETHdijzkA
+4. leetcode 380. Insert Delete GetRandom O(1) !!重写 del self.hashmap[val]在最后
+5. leetcode 54. Spiral Matrix ---right = len(matrix[0])
+6. leetcode 387. First Unique Character in a String
+7. leetcode 202. Happy Number
+8. leetcode 24. Swap Nodes in Pairs
+
 
 
 
