--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -151,5 +151,12 @@
 
 
 
+9/30
+1. leetcode 539. Minimum Time Difference ---重写
+2. leetcode 15. 3Sum
+3. leetcode 301. Remove Invalid Parentheses
+4. leetcode 146. LRU Cache ---put: if key in self.hash: node = self.hash[key]
+5. leetcode 981. Time Based Key-Value Store
+6. leetcode 349. Intersection of Two Arrays
 
 
