--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -159,4 +159,12 @@
 5. leetcode 981. Time Based Key-Value Store
 6. leetcode 349. Intersection of Two Arrays
 
-
+10.1
+1. leetcode 215. Kth Largest Element in an Array ---quick select
+2. leetcode 547. Friend Circles ---重写
+3. leetcode 986. Interval List Intersections 
+4. leetcode 46. Permutations
+5. leetcode 31. Next Permutation --do not return anything: nums[:index+1] = sorted()
+6. leetcode 39. Combination Sum
+7. leetcode 71. Simplify Path ---stack ---重写
+8. leetcode 67. Add Binary ---def bin(n)  https://www.geeksforgeeks.org/bin-in-python/
