--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -168,3 +168,16 @@
 6. leetcode 39. Combination Sum
 7. leetcode 71. Simplify Path ---stack ---重写
 8. leetcode 67. Add Binary ---def bin(n)  https://www.geeksforgeeks.org/bin-in-python/
+
+10.2
+1. leetcode 289. Game of Life !! for newx newy 指用于count_live
+2. leetcode 621. Task Scheduler ---重写！
+3. leetcode 121. Best Time to Buy and Sell Stock
+4. leetcode 309. Best Time to Buy and Sell Stock with Cooldown https://www.youtube.com/watch?v=oL6mRyTn56M ---重写
+5. leetcode 2. Add Two Numbers 
+6. leetcode 445. Add Two Numbers II
+7. leetcode 98. Validate Binary Search Tree
+8. leetcode 543. Diameter of Binary Tree
+
+10.3
+
