--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -180,4 +180,13 @@
 8. leetcode 543. Diameter of Binary Tree
 
 10.3
+1. leetcode 130. Surrounded Regions
+2. leetcode 539. Minimum Time Difference
+3. leetcode 706. Design HashMap ---重写！！！！
+4. leetcode 204. Count Primes
+5. leetcode 560. Subarray Sum Equals K
+6. leetcode 986. Interval List Intersections 
+7 leetcode 46. Permutations
+8 leetcode 31. Next Permutation --do not return anything: nums[:index+1] = sorted()
+9. leetcode 39. Combination Sum
 
