--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -190,3 +190,15 @@
 8 leetcode 31. Next Permutation --do not return anything: nums[:index+1] = sorted()
 9. leetcode 39. Combination Sum
 
+10.4
+1. leetcode 221. Maximal Square ---重写！
+2. leetcode 22. Generate Parentheses
+3. leetcode 739. Daily Temperatures
+4. leetcode 937. Reorder Data in Log Files ---- log不要随便split
+5. leetcode 222. Count Complete Tree Nodes ---重写
+6. leetcode 1. Two Sum
+7. leetcode 1021. Remove Outermost Parentheses
+8. leetcode 21. Merge Two Sorted Lists
+
+
+
