--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -200,5 +200,15 @@
 7. leetcode 1021. Remove Outermost Parentheses
 8. leetcode 21. Merge Two Sorted Lists
 
+10.5
+1. leetcode 189. Rotate Array
+2. leetcode 215. Kth Largest Element in an Array
+3. leetcode 53. Maximum Subarray
+4. leetcode 529. Minesweeper ---重写
+5. leetcode 394. Decode String ---多写
+6. leetcode 242. Valid Anagram
+7. leetcode 442. Find All Duplicates in an Array --重写
+8. leetcode 543. Diameter of Binary Tree
+9. leetcode 938. Range Sum of BST ---!!
 
 
