--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -212,3 +212,12 @@
 9. leetcode 938. Range Sum of BST ---!!
 
 
+10.9
+1. leetocde 855. Exam Room--重写
+2. leetcode 53. Maximum Subarray
+3. leetcode 73. Set Matrix Zeroes
+4. leetcode 36. Valid Sudoku
+5. leetcode 75. Sort Colors
+6. leetcode 1048. Longest String Chain !!dp
+7. leetcode 498. Diagonal Traverse --重写
+8. leetcode 621. Task Scheduler
