--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -221,3 +221,7 @@
 6. leetcode 1048. Longest String Chain !!dp
 7. leetcode 498. Diagonal Traverse --重写
 8. leetcode 621. Task Scheduler
+9. leetcode 525. Contiguous Array --重写
+10. leetcode 419. Battleships in a Board
+11. leetcode 59. Spiral Matrix II
+
