--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -225,3 +225,14 @@
 10. leetcode 419. Battleships in a Board
 11. leetcode 59. Spiral Matrix II
 
+10.10
+1. leetcode 143. Reorder List
+2. leetcode 912. Sort an Array
+3. leetcode 767. Reorganize String ---heap，重写
+4. leetcode 179. Largest Number
+5. leetcode 287. Find the Duplicate Number
+6. leetcode 96. Unique Binary Search Trees
+7. leetcode 442. Find All Duplicates in an Array
+8. leetcode 713. Subarray Product Less Than K --重写
+
+
