--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -235,4 +235,11 @@
 7. leetcode 442. Find All Duplicates in an Array
 8. leetcode 713. Subarray Product Less Than K --重写
 
+10.11
+1.leetcode 3. Longest Substring Without Repeating Characters
+2. leetcode 416. Partition Equal Subset Sum --重写
+3. leetcode 935. Knight Dialer https://www.youtube.com/watch?v=HTnIFivp0aw
+4. leetcode 688. Knight Probability in Chessboard ---bfs,重写  https://www.youtube.com/watch?v=MyJvMydR2G4
+5. leetcode 15. 3Sum
+
 
