--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -242,4 +242,15 @@
 4. leetcode 688. Knight Probability in Chessboard ---bfs,重写  https://www.youtube.com/watch?v=MyJvMydR2G4
 5. leetcode 15. 3Sum
 
+10.12
+1. leetcode 16. 3Sum Closest
+2. leetcode 228. Summary Ranges
+3. leetcode 238. Product of Array Except Self
+4. leetcode 974. Subarray Sums Divisible by K
+5. leetcode 103. Binary Tree Zigzag Level Order Traversal
+6. leetcodee 283. Move Zeroes
+7. leetcode 721. Accounts Merge 重写
+8.leetcode 332. Reconstruct Itinerary
+9. leetcode 341. Flatten Nested List Iterator
+
 
