--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -253,4 +253,13 @@
 8.leetcode 332. Reconstruct Itinerary
 9. leetcode 341. Flatten Nested List Iterator
 
+10.13
+1. leetcode 59. Spiral Matrix II
+2. leetcode 406. Queue Reconstruction by Height
+3. leetcode 767. Reorganize String
+4. leetcode 416. Partition Equal Subset Sum
+5. leetcode 200. Number of Islands
+6. leetcode 3. Longest Substring Without Repeating Characters
 
+10.14
+1. leetcode 399. Evaluate Division, 重写！
