--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -263,3 +263,9 @@
 
 10.14
 1. leetcode 399. Evaluate Division, 重写！
+2. leetcode 24. Swap Nodes in Pairs
+3. leetcode 322. Coin Change
+4. leetcode 518. Coin Change 2 --重写
+5. leetcode 6. ZigZag Conversion
+6. leetcode 380. Insert Delete GetRandom O(1)
+7. f
