--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -268,4 +268,5 @@
 4. leetcode 518. Coin Change 2 --重写
 5. leetcode 6. ZigZag Conversion
 6. leetcode 380. Insert Delete GetRandom O(1)
-7. f
+7. leetcode 609. Find Duplicate File in System
+8. leetcode 1130. Minimum Cost Tree From Leaf Values ,重写
