--- a/9.16-10.15.md
+++ b/9.16-10.15.md
@@ -270,3 +270,12 @@
 6. leetcode 380. Insert Delete GetRandom O(1)
 7. leetcode 609. Find Duplicate File in System
 8. leetcode 1130. Minimum Cost Tree From Leaf Values ,重写
+
+10.15
+1. leetcode 209. Minimum Size Subarray Sum
+2. leetcode 3. Longest Substring Without Repeating Characters
+3. leetcode 105. Construct Binary Tree from Preorder and Inorder Traversal
+4. leetcode 416. Partition Equal Subset Sum ,重写！
+5. leetcode 348. Design Tic-Tac-Toe
+6. leetcode 378. Kth Smallest Element in a Sorted Matrix !!重写 klogk
+7. 
